src/test/resources/refCompilerOutput/invalid/syntaxErr/sequence/endSeq.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 11:14 -- extraneous input ';' expecting <EOF>
1 parser error(s) detected, no further compilation attempted.
